Changes: - adaptation on mobile; - some fix; - update design.

--- a/Mobile_dashboard/assets/bWLwgP.css
+++ b/Mobile_dashboard/assets/bWLwgP.css
@@ -456,12 +456,4 @@ td {
   text-align: center;
 }
 
-.line_block {
-        width:47%;
-        background: #222780;
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 10px;
-        margin-left: 1%;
-        }
+
